Fix project background whitespace on mobile

--- a/CollAction/Frontend/app/project/styles/ProjectDetails.scss
+++ b/CollAction/Frontend/app/project/styles/ProjectDetails.scss
@@ -234,7 +234,7 @@
 
     @media (max-width: 992px) {
         #project-background {
-            padding: 70px 0px;
+            background-size: cover;
         }
     }
 }
